--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,22 +12,25 @@ import Hero from "../components/Hero.astro";
   <Section section={HOME.aidd} />
   <Section section={HOME.technologies} />
   <Section section={HOME.us} />
-  <aside class="container colored-headers">
+  <aside class="container">
     <header>
-      <h2>Una cosa más...</h2>
+      <h1 class="color">Te presento a AIDDbot</h1>
+      <p class="color">Automatiza tu ciclo de desarrollo con IA</p>
     </header>
-    <p>
-      He desarrollado <kbd
+    <main>
+      Siguiendo la filosofía AI-Driven Development, he desarrollado <kbd
         ><a href="https://github.com/AIDDbot/AIDDbot" target="_blank">AIDDbot</a
         ></kbd
       >, un conjunto de herramientas (prompts, instrucciones, agentes, etc.)
       para que puedas usar fácilmente toda la potencia de la IA en tu día a día.
-    </p>
-    <p>
-      Puedes verlas todas en <a
+    </main>
+    <footer>
+      <a
+        role="button"
+        class="outline secondary"
         href="https://github.com/AIDDbot/"
-        target="_blank">AIDDbot en GitHub</a
-      >.
-    </p>
+        target="_blank">Descárgalo de GitHub</a
+      >
+    </footer>
   </aside>
 </Layout>
