--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Hero from "../components/Hero.astro";
   <Section section={HOME.aidd} />
   <Section section={HOME.technologies} />
   <Section section={HOME.us} />
-  <aside class="container">
+  <aside class="container center">
     <header>
       <h1 class="color">Te presento a AIDDbot</h1>
       <p class="color">Automatiza tu ciclo de desarrollo con IA</p>
