--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import Hero from "../components/Hero.astro";
         role="button"
         class="outline secondary"
         href="https://github.com/AIDDbot/"
-        target="_blank">Descárgalo de GitHub</a
+        target="_blank">Descubre más en GitHub</a
       >
     </footer>
   </aside>
