--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,9 @@ import Hero from "../components/Hero.astro";
     </header>
     <main>
       Siguiendo la filosofía AI-Driven Development, he desarrollado <kbd
-        ><a href="https://github.com/AIDDbot/AIDDbot" target="_blank">AIDDbot</a
+        ><a
+          href="https://aicode.academy/community/opensource/aiddbot/"
+          target="_blank">AIDDbot</a
         ></kbd
       >, un conjunto de herramientas (prompts, instrucciones, agentes, etc.)
       para que puedas usar fácilmente toda la potencia de la IA en tu día a día.
