--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -8,14 +8,14 @@
   --ab-white: #fff;
   --ab-yellow: #fafa00;
   --ab-red: #ff0000;
-  --ab-light-gray: #dddddd;
+  --ab-light-gray: #eeeeee;
   --ab-gray: #777777;
   --ab-dark-gray: #333333;
 }
 
 /* dark theme */
 [data-theme="dark"] {
-  --pico-color: white;
+  --pico-color: var(--ab-light-gray);
   --pico-background-color: black;
   --pico-primary: var(--ab-blue);
   --pico-primary-hover: var(--ab-blue);
@@ -30,16 +30,26 @@
   --pico-secondary-hover-background: var(--ab-green);
   --pico-box-shadow: 0 0 2px 0 var(--pico-primary);
   --ab-theme-gray: var(--ab-dark-gray);
-  --ab-gradient-primary: linear-gradient(90deg, var(--ab-light-green), var(--ab-light-blue), var(--ab-blue));
-  --ab-gradient-secondary: linear-gradient(90deg, var(--ab-dark-green),
-      var(--ab-dark-blue), var(--ab-blue));
+
+  --ab-gradient-primary:
+    linear-gradient(45deg,
+      var(--ab-green) 0%,
+      var(--ab-light-blue) 25%,
+      var(--ab-light-green) 50%,
+      var(--ab-blue) 75%);
+  --ab-gradient-secondary:
+    linear-gradient(45deg,
+      var(--ab-light-blue) 0%,
+      var(--ab-light-green) 25%,
+      var(--ab-blue) 50%,
+      var(--ab-green) 75%);
   color-scheme: dark;
 }
 
 /* light theme */
 [data-theme="light"],
 :root:not([data-theme="dark"]) {
-  --pico-color: black;
+  --pico-color: var(--ab-dark-gray);
   --pico-background-color: white;
   --pico-primary: var(--ab-blue);
   --pico-primary-hover: var(--ab-light-blue);
@@ -54,10 +64,18 @@
   --pico-secondary-hover-background: var(--ab-green);
   --pico-box-shadow: 0 0 2px 0 var(--pico-primary);
   --ab-theme-gray: var(--ab-light-gray);
-  --ab-gradient-primary: linear-gradient(90deg, var(--ab-dark-green),
-      var(--ab-dark-blue), var(--ab-blue));
-  --ab-gradient-secondary: linear-gradient(90deg, var(--ab-light-green),
-      var(--ab-light-green), var(--ab-blue));
+  --ab-gradient-primary:
+    linear-gradient(45deg,
+      var(--ab-green) 0%,
+      var(--ab-dark-blue) 25%,
+      var(--ab-dark-green) 50%,
+      var(--ab-blue) 75%);
+  --ab-gradient-secondary:
+    linear-gradient(45deg,
+      var(--ab-dark-blue) 0%,
+      var(--ab-dark-green) 25%,
+      var(--ab-blue) 50%,
+      var(--ab-green) 75%);
   color-scheme: light;
 }
 
