--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,14 +15,14 @@ import Hero from "../components/Hero.astro";
   <aside class="container center">
     <header>
       <h1 class="color">Te presento a AIDDbot</h1>
-      <p class="color">Automatiza tu ciclo de desarrollo con IA</p>
+      <p class="color">
+        Un asistente IA de programación que aumenta tu IDE para desarrollos
+        corporativos.
+      </p>
     </header>
     <main>
       Siguiendo la filosofía AI-Driven Development, he desarrollado <kbd
-        ><a
-          href="https://aicode.academy/community/opensource/aiddbot/"
-          target="_blank">AIDDbot</a
-        ></kbd
+        >AIDDbot</kbd
       >, un conjunto de herramientas (prompts, instrucciones, agentes, etc.)
       para que puedas usar fácilmente toda la potencia de la IA en tu día a día.
     </main>
@@ -30,8 +30,8 @@ import Hero from "../components/Hero.astro";
       <a
         role="button"
         class="outline secondary"
-        href="https://github.com/AIDDbot/"
-        target="_blank">Descubre más en GitHub</a
+        href="https://aicode.academy/community/opensource/aiddbot/"
+        target="_blank">Descubre más en Aicode Academy</a
       >
     </footer>
   </aside>
