--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,22 +13,22 @@ const { title, subtitle, cta } = hero;
 ---
 
 <section id="hero" class="container">
-  <header class="center">
+  <header class="">
     <h1 class="color"><MatrixText text={title} /></h1>
   </header>
-  <main class="center">
+  <main class="">
     <span>{subtitle}</span>
   </main>
   {
     cta && (
-      <footer class="center">
+      <footer class="">
         {cta.link && (
           <a role="button" class="outline" href={cta.link} rel="noopener">
             {cta.text}
           </a>
         )}
         {!cta.link && (
-          <h2 class="center primary">
+          <h2 class=" primary">
             <span>
               {cta.text}
               <BlinkCursor />
