--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,10 +12,10 @@ import Hero from "../components/Hero.astro";
   <Section section={HOME.aidd} />
   <Section section={HOME.technologies} />
   <Section section={HOME.us} />
-  <aside class="container center">
+  <aside class="container">
     <header>
-      <h1 class="color">Te presento a AIDDbot</h1>
-      <p class="color">
+      <h1 class="">Te presento a AIDDbot</h1>
+      <p class="">
         Un asistente IA de programación que aumenta tu IDE para desarrollos
         corporativos.
       </p>
@@ -29,7 +29,7 @@ import Hero from "../components/Hero.astro";
     <footer>
       <a
         role="button"
-        class="outline secondary"
+        class="outline"
         href="https://aicode.academy/community/opensource/aiddbot/"
         target="_blank">Descubre más en Aicode Academy</a
       >
