--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -76,10 +76,10 @@ const PORTFOLIO = {
     </ul>
   </main>
 
-  <aside class="container center">
+  <aside class="container">
     <header>
-      <h1 class="color">AIDDbot</h1>
-      <p class="color">Configuración de Agente de IA Open Source</p>
+      <h1 class="">AIDDbot</h1>
+      <p class="">Configuración de Agente de IA Open Source</p>
     </header>
     <main>
       Siguiendo la filosofía AI-Driven Development, he desarrollado <kbd
@@ -90,7 +90,7 @@ const PORTFOLIO = {
     <footer>
       <a
         role="button"
-        class="outline secondary"
+        class="outline"
         href="https://aicode.academy/community/opensource/aiddbot/"
         >Descubre AIDDbot</a
       >
