--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -8,20 +8,21 @@
   --ab-white: #fff;
   --ab-yellow: #fafa00;
   --ab-red: #ff0000;
-  --ab-light-gray: #eeeeee;
+  --ab-light-gray: #fefefe;
   --ab-gray: #777777;
-  --ab-dark-gray: #333333;
+  --ab-dark-gray: #222222;
 }
 
 /* dark theme */
 [data-theme="dark"] {
   --pico-color: var(--ab-light-gray);
-  --pico-background-color: black;
+  --pico-background-color: var(--ab-dark-gray);
   --pico-primary: var(--ab-blue);
   --pico-primary-hover: var(--ab-blue);
   --pico-primary-background: var(--ab-light-blue);
   --pico-primary-hover-background: var(--ab-blue);
-  --pico-primary-inverse: black;
+  --pico-primary-inverse: var(--pico-background-color);
+  --pico-card-background-color: var(--pico-background-color);
   --pico-underline: var(--ab-light-blue);
   --pico-primary-underline: var(--ab-light-blue);
   --pico-secondary: var(--ab-light-green);
@@ -32,17 +33,17 @@
   --ab-theme-gray: var(--ab-dark-gray);
 
   --ab-gradient-primary:
-    linear-gradient(45deg,
-      var(--ab-green) 0%,
-      var(--ab-light-blue) 25%,
-      var(--ab-light-green) 50%,
-      var(--ab-blue) 75%);
+    linear-gradient(0deg,
+      var(--ab-blue) 0%,
+      var(--ab-light-blue) 50%,
+      var(--ab-light-green) 75%,
+      var(--ab-green) 90%);
   --ab-gradient-secondary:
     linear-gradient(45deg,
-      var(--ab-light-blue) 0%,
-      var(--ab-light-green) 25%,
-      var(--ab-blue) 50%,
-      var(--ab-green) 75%);
+      var(--ab-blue) 0%,
+      var(--ab-light-blue) 50%,
+      var(--ab-light-green) 75%,
+      var(--ab-green) 90%);
   color-scheme: dark;
 }
 
@@ -50,12 +51,12 @@
 [data-theme="light"],
 :root:not([data-theme="dark"]) {
   --pico-color: var(--ab-dark-gray);
-  --pico-background-color: white;
+  --pico-background-color: var(--ab-light-gray);
   --pico-primary: var(--ab-blue);
   --pico-primary-hover: var(--ab-light-blue);
   --pico-primary-background: var(--ab-blue);
   --pico-primary-hover-background: var(--ab-light-blue);
-  --pico-primary-inverse: white;
+  --pico-primary-inverse: var(--pico-background-color);
   --pico-underline: var(--ab-blue);
   --pico-primary-underline: var(--ab-blue);
   --pico-secondary: var(--ab-light-green);
@@ -65,17 +66,17 @@
   --pico-box-shadow: 0 0 2px 0 var(--pico-primary);
   --ab-theme-gray: var(--ab-light-gray);
   --ab-gradient-primary:
-    linear-gradient(45deg,
-      var(--ab-green) 0%,
-      var(--ab-dark-blue) 25%,
-      var(--ab-dark-green) 50%,
-      var(--ab-blue) 75%);
+    linear-gradient(0deg,
+      var(--ab-blue) 0%,
+      var(--ab-dark-blue) 50%,
+      var(--ab-dark-green) 75%,
+      var(--ab-green) 90%);
   --ab-gradient-secondary:
     linear-gradient(45deg,
-      var(--ab-dark-blue) 0%,
-      var(--ab-dark-green) 25%,
-      var(--ab-blue) 50%,
-      var(--ab-green) 75%);
+      var(--ab-blue) 0%,
+      var(--ab-dark-blue) 50%,
+      var(--ab-dark-green) 75%,
+      var(--ab-green) 90%);
   color-scheme: light;
 }
 
@@ -96,9 +97,17 @@ code {
 }
 
 a {
-  color: var(--pico-primary);
+  text-decoration: underline;
+  background: var(--ab-gradient-secondary);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 a:hover {
   font-weight: bold;
+}
+
+blockquote {
+  border-left: 4px solid var(--pico-primary);
 }
