--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -13,8 +13,7 @@
   -webkit-text-fill-color: transparent;
 }
 
-.colored-headers h2,
-.colored-headers h3 {
+.colored-headers h1 {
   background: var(--ab-gradient-primary);
   -webkit-background-clip: text;
   background-clip: text;
@@ -33,6 +32,7 @@
 
 .logo {
   font-family: var(--pico-font-family-emoji);
+  color: var(--ab-gradient-secondary);
 }
 
 .primary {
