--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -9,7 +9,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const logo = "/logo_2.png";
 const fontAPI = "https://fonts.googleapis.com";
 const fontFamilies =
-  "family=Fira+Mono&family=Major+Mono+Display&family=Tomorrow";
+  "family=Cascadia+Code&family=Major+Mono+Display&family=Tomorrow";
 const fonts = `${fontAPI}/css2?${fontFamilies}&display=swap`;
 const motto = "AI code quality.";
 const twitterHandle = "@AlbertoBasalo";
