feat: Add new 'Consultoría' and 'Formación' pages with associated styling and layout components.

--- a/src/pages/formacion.astro
+++ b/src/pages/formacion.astro
@@ -161,11 +161,12 @@ const FORMACION = {
 
 <Layout layout={FORMACION.layout}>
   <Hero hero={FORMACION.hero} />
-
-  <Section section={FORMACION.services} />
-  <Section section={FORMACION.angular} />
-  <Section section={FORMACION.testing} />
-  <Section section={FORMACION.aidd} />
-  <Section section={FORMACION.clean} />
-  <Section section={FORMACION.ediciones} />
+<main>
+    <Section section={FORMACION.services} />
+    <Section section={FORMACION.angular} />
+    <Section section={FORMACION.testing} />
+    <Section section={FORMACION.aidd} />
+    <Section section={FORMACION.clean} />
+    <Section section={FORMACION.ediciones} />
+  </main>
 </Layout>
