--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -8,8 +8,7 @@ const { title, description } = Astro.props;
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const logo = "/logo_2.png";
 const fontAPI = "https://fonts.googleapis.com";
-const fontFamilies =
-  "family=Cascadia+Code&family=Major+Mono+Display&family=Tomorrow";
+const fontFamilies = "family=Space+Grotesk&family=Geist&family=Geist+Mono";
 const fonts = `${fontAPI}/css2?${fontFamilies}&display=swap`;
 const motto = "AI code quality.";
 const twitterHandle = "@AlbertoBasalo";
