--- a/src/pages/consultoria.astro
+++ b/src/pages/consultoria.astro
@@ -146,11 +146,12 @@ const CONSULTORIA = {
 
 <Layout layout={CONSULTORIA.layout}>
   <Hero hero={CONSULTORIA.hero} />
-
-  <Section section={CONSULTORIA.services} />
-  <Section section={CONSULTORIA.arquitectura} />
-  <Section section={CONSULTORIA.testing} />
-  <Section section={CONSULTORIA.refactoring} />
-  <Section section={CONSULTORIA.ia} />
-  <Section section={CONSULTORIA.sesion} />
+  <main>
+    <Section section={CONSULTORIA.services} />
+    <Section section={CONSULTORIA.arquitectura} />
+    <Section section={CONSULTORIA.testing} />
+    <Section section={CONSULTORIA.refactoring} />
+    <Section section={CONSULTORIA.ia} />
+    <Section section={CONSULTORIA.sesion} />
+  </main>
 </Layout>
