--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import Hero from "../components/Hero.astro";
 
   <Section section={HOME.services} />
   <Section section={HOME.aidd} />
+  <Section section={HOME.bestPractices} />
   <Section section={HOME.technologies} />
   <Section section={HOME.us} />
   <aside class="container">
@@ -21,8 +22,8 @@ import Hero from "../components/Hero.astro";
       </p>
     </header>
     <main>
-      Siguiendo la filosofía AI-Driven Development, he desarrollado <kbd
-        >AIDDbot</kbd
+      Siguiendo la filosofía <b>AI-Driven Development</b>, he desarrollado <code
+        >AIDDbot</code
       >, un conjunto de herramientas (prompts, instrucciones, agentes, etc.)
       para que puedas usar fácilmente toda la potencia de la IA en tu día a día.
     </main>
@@ -31,7 +32,7 @@ import Hero from "../components/Hero.astro";
         role="button"
         class="outline"
         href="https://aicode.academy/community/opensource/aiddbot/"
-        target="_blank">Descubre más en Aicode Academy</a
+        target="_blank">Descubre más en AI Code Academy</a
       >
     </footer>
   </aside>
