--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -43,30 +43,35 @@ const PORTFOLIO = {
       <li>APfutura</li>
       <li>Balidea</li>
       <li>BBVA</li>
-    </ul>
-    <ul>
       <li>Banco de Santander</li>
       <li>Barceló Viajes</li>
+    </ul>
+    <ul>
       <li>CoreMain</li>
+      <li>Cluster TIC Canarias</li>
       <li>Cluster TIC Galicia</li>
       <li>DuaCode</li>
+      <li>Evolutio</li>
       <li>Ezentis</li>
       <li>Hotusa</li>
       <li>Imatia</li>
+      <li>Imaweb</li>
+      <li>Inditex</li>
     </ul>
     <ul>
-      <li>Imaweb</li>
       <li>Indra</li>
+      <li>Inetum</li>
       <li>Qindel</li>
       <li>Quaroni</li>
       <li>LedaMC</li>
       <li>Montrel</li>
       <li>Netex</li>
       <li>Plexus</li>
-    </ul>
-    <ul>
       <li>PSA-Peugeot-Citroën</li>
       <li>Pull&Bear</li>
+    </ul>
+    <ul>
+      <li>Redinet</li>
       <li>Softtek</li>
       <li>TcMan</li>
       <li>Televes</li>
@@ -75,8 +80,36 @@ const PORTFOLIO = {
       <li>Zara Home</li>
     </ul>
   </main>
+  <section class="container">
+    <header>
+      <h1 class="">Partners</h1>
+      <p class="">Academias profesionales con las que colaboro</p>
+    </header>
+    <main class="grid">
+      <ul>
+        <li>
+          <a href="https://trainingit.es/" target="_blank">Training IT</a>
+        </li>
+        <li><a href="https://tecnofor.es/" target="_blank">Tecnofor</a></li>
+        <li>
+          <a href="https://aicode.academy/" target="_blank">AI Code Academy</a>
+        </li>
+      </ul>
+      <ul>
+        <li><a href="https://www.m2iformacion.com/" target="_blank">M2I</a></li>
+        <li>
+          <a href="https://www.formadoresit.online/" target="_blank"
+            >Formadores IT</a
+          >
+        </li>
+        <li>
+          <a href="https://escuela.it/" target="_blank">Escuela IT</a>
+        </li>
+      </ul>
+    </main>
+  </section>
 
-  <aside class="container">
+  <section class="container">
     <header>
       <h1 class="">AIDDbot</h1>
       <p class="">Configuración de Agente de IA Open Source</p>
@@ -95,6 +128,6 @@ const PORTFOLIO = {
         >Descubre AIDDbot</a
       >
     </footer>
-  </aside>
+  </section>
   <Section section={PORTFOLIO.section} />
 </Layout>
