feat: add portfolio page displaying client lists, partners, and AIDDbot information

--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -2,6 +2,7 @@
 import Layout from "@layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
 import Section from "../components/Section.astro";
+import PrimaryComment from "../components/PrimaryComment.astro";
 
 const PORTFOLIO = {
   layout: {
@@ -82,7 +83,7 @@ const PORTFOLIO = {
   </main>
   <section class="container">
     <header>
-      <h1 class="">Partners</h1>
+      <h1 class=""><PrimaryComment />Partners</h1>
       <p class="">Academias profesionales con las que colaboro</p>
     </header>
     <main class="grid">
@@ -111,7 +112,7 @@ const PORTFOLIO = {
 
   <section class="container">
     <header>
-      <h1 class="">AIDDbot</h1>
+      <h1 class=""><PrimaryComment />AIDDbot</h1>
       <p class="">Configuración de Agente de IA Open Source</p>
     </header>
     <main>
