--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
-import Section from "../components/Section.astro";
 import PrimaryComment from "../components/PrimaryComment.astro";
+import Section from "../components/Section.astro";
 
 const PORTFOLIO = {
   layout: {
@@ -44,13 +44,13 @@ const PORTFOLIO = {
       <li>APfutura</li>
       <li>Balidea</li>
       <li>BBVA</li>
-      <li>Banco de Santander</li>
+      <li>Banco Santander</li>
       <li>Barceló Viajes</li>
     </ul>
     <ul>
       <li>CoreMain</li>
-      <li>Cluster TIC Canarias</li>
-      <li>Cluster TIC Galicia</li>
+      <li>Cluster Canarias</li>
+      <li>Cluster Galicia</li>
       <li>DuaCode</li>
       <li>Evolutio</li>
       <li>Ezentis</li>
@@ -68,7 +68,7 @@ const PORTFOLIO = {
       <li>Montrel</li>
       <li>Netex</li>
       <li>Plexus</li>
-      <li>PSA-Peugeot-Citroën</li>
+      <li>Peugeot-Citroën</li>
       <li>Pull&Bear</li>
     </ul>
     <ul>
@@ -79,6 +79,7 @@ const PORTFOLIO = {
       <li>Ultebra</li>
       <li>Zara</li>
       <li>Zara Home</li>
+      <li>¿Tu empresa?</li>
     </ul>
   </main>
   <section class="container">
